@@ -2,5 +2,8 @@ class ClassesController < ResourceController::Base
   create do
     wants.html { redirect_to classe_lessons_url(object) }
   end
-#  use_ajaxian_responses
+
+  update.before do
+    (params[:classe][:existing_lesson_attributes] ||= {}) if params[:classe]
+  end
 end
